Fix choose class page z-index issue

--- a/src/pages/Create.module.css
+++ b/src/pages/Create.module.css
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 10;
 }
 
 .classContainer .class,
